--- a/views/genre_form.pug
+++ b/views/genre_form.pug
@@ -7,6 +7,7 @@ block content
     div.form-group
       label(for='name') Genre:
       input#name.form-control(type='text', placeholder='Fantasy, Poetry etc.' name='name' value=(undefined===genre ? '' : genre.name))
+      input#id.form-control(type='hidden', name='id', required='true', value=genre._id )
     button.btn.btn-primary(type='submit') Submit
 
   if errors 
